positioning fix on mobile header

--- a/css/styles.css
+++ b/css/styles.css
@@ -219,7 +219,7 @@ nav ul li a:visited {color: #ffffff;}
 	}
 	
 	.brand {
-		margin-bottom: 20px;
+		margin-bottom: 6vw;
 	}
 	
     .logo a {
